Improve selection of test classes